--- a/File-Upload-Client-Application/src/main/resources/application.properties
+++ b/File-Upload-Client-Application/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 server.port=8081
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibername.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
